# pushinpay-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
pixbot/: bot.py  logger.py  settings.py
pixbot/models/: transaction.py
pixbot/plugins/: callbacks.py  payment.py  start.py
pixbot/utils/: helpers.py  messages.py  payment_api.py
